--- a/indez.html
+++ b/indez.html
@@ -15,7 +15,7 @@
                 <input type="text" id="item-name">
             </div>
             <div>
-                <label for="amount">Amount</label>
+                <label for="item-amount">Amount</label>
                 <input type="number" id="item-amount">
             </div>
             <button type="submit">Add Item</button>
